ipc: Use regular Unix-domain sockets instead of abstract sockets
Abstract sockets are nice but it's not worth the portability trade
off. Instead it now creates a regular Unix-domain socket. It ensures
the socket is only used by a single process by creating an additional
empty lock file and calling flock on it.

--- a/README
+++ b/README
@@ -21,12 +21,10 @@ wouldn't recommend using for anything highly sensitive.
 Dependencies
 ━━━━━━━━━━━━
 
-Notbit requires Linux. It will not work on other Unices because it is
-using some Linux-specific features such as abstract Unix-domain
-sockets. It also requires libcrypto with support for elliptic-curve
-cryptography. Unfortunately if you are building on Fedora you will
-need to build libcrypto from source because they don't ship ECC due to
-patent concerns.
+Notbit requires a modern Unix such as Linux. It also requires
+libcrypto with support for elliptic-curve cryptography. Unfortunately
+if you are building on Fedora you will need to build libcrypto from
+source because they don't ship ECC due to patent concerns.
 
 Building
 ━━━━━━━━
